# qc

./: .gitignore  CMakeLists.txt
pigz/: CMakeLists.txt  pigz.c
samtools/: .gitignore  CMakeLists.txt  bamtk.c  config.h  version.h
samtools/mainsrc/: main.c
src/: libs.hpp  main.cpp
